--- a/_posts/diary/2018-04-17-开始写博客啦.markdown
+++ b/_posts/diary/2018-04-17-开始写博客啦.markdown
@@ -1,7 +1,8 @@
 ---
-layout: post
+layout: blog 
 title:  "开始写博客啦"
 date:   2018-04-17 18:46:32 +0800
-categories: jekyll update
+diary: true
+categories: 日记
 ---
 啥都没写
