--- a/_posts/technology/2018-04-21-MySql的主从备份配置说明.md
+++ b/_posts/technology/2018-04-21-MySql的主从备份配置说明.md
@@ -11,41 +11,41 @@ tags:
 - 主从
 ---
 
-#说明
+# 说明
 本文说明如何配置mysql数据库的主从备份
-#准备步骤
+## 准备步骤
 *两台mysql服务器,mysql版本建议再5.5以上
 *假设主IP:192.168.1.2
 *假设从IP:192.168.1.3
 *主从数据库数据一致
 
-#主数据库master配置的修改
+# 主数据库master配置的修改
 *修改/etc/my.cnf内容,查找替换为以下
 ```
-#日志文件名
+## 日志文件名
 log_bin = mysql-bin
-#主数据库端的ID号
+## 主数据库端的ID号
 server-id = 1
 ```
-#重启数据库
+## 重启数据库
 ```
 service mysql restart
 ```
-#创建用户同步的slave账号 slave_account,密码37588645
+## 创建用户同步的slave账号 slave_account,密码37588645
 ```
 mysql> create user 'slave_account'@'%' identified by '37588645';
 ```
-#为slave_account账号赋予replication slave权限
+## 为slave_account账号赋予replication slave权限
 ```
 mysql> grant replication slave on *.* to 'slave_account'@'%' identified by '37588645';
 ```
-#以上已经要求数据一致,如果不一致,可以执行以下步骤,导出数据库
+## 以上已经要求数据一致,如果不一致,可以执行以下步骤,导出数据库
 ```
 mysql>flush tables with read lock;
 $ mysqldump -uroot -proot efly > efly.sql
 mysql unlock tables;
 ```
-#查询master的状态
+## 查询master的状态
 ```
 mysql> show master status;  
 +------------------+----------+--------------+------------------+  
@@ -56,17 +56,17 @@ mysql> show master status;
 1 row in set
 ```
 需要记住mysql-bin.00009 196 这两个参数,后面要用到
-#从数据库配置的修改
+# 从数据库配置的修改
 *修改/etc/my.cnf
 ```
 server-id = 2
 ```
-#配置连接哪台主服务器
+## 配置连接哪台主服务器
 ```
 mysql>change master to master_host='`192.168.1.2',master_user='slave_account',master_password='37588645',master_log_file='mysql-bin.000009',master_log_pos=196;
 mysql>start slave;
 ```
-#检查备份状态:
+## 检查备份状态:
 ```
 mysql> show slave status\G;
 *************************** 1. row ***************************  
@@ -87,7 +87,7 @@ mysql> show slave status\G;
           ...  
 ```
 注:Slave_IO_RUNNING及Slave_SQL_Running进程必须正常运行,即YES状态，否则说明同步失败。
-#如果要停掉备份状态,可以执行以下命令
+## 如果要停掉备份状态,可以执行以下命令
 ```
 mysql> stop slave;
 ```
