--- a/_posts/technology/2018-04-21-MySql的主从备份配置说明.md
+++ b/_posts/technology/2018-04-21-MySql的主从备份配置说明.md
@@ -21,32 +21,32 @@ tags:
 
 # 主数据库master配置的修改
 *修改/etc/my.cnf内容,查找替换为以下
-```
+``` ini
 ## 日志文件名
 log_bin = mysql-bin
 ## 主数据库端的ID号
 server-id = 1
 ```
 ## 重启数据库
-```
+``` shell
 service mysql restart
 ```
 ## 创建用户同步的slave账号 slave_account,密码37588645
-```
+``` sql
 mysql> create user 'slave_account'@'%' identified by '37588645';
 ```
 ## 为slave_account账号赋予replication slave权限
-```
+``` sql
 mysql> grant replication slave on *.* to 'slave_account'@'%' identified by '37588645';
 ```
 ## 以上已经要求数据一致,如果不一致,可以执行以下步骤,导出数据库
-```
+``` sql
 mysql>flush tables with read lock;
 $ mysqldump -uroot -proot efly > efly.sql
 mysql unlock tables;
 ```
 ## 查询master的状态
-```
+``` sql
 mysql> show master status;  
 +------------------+----------+--------------+------------------+  
 | File             | Position | Binlog_Do_DB | Binlog_Ignore_DB |  
@@ -58,16 +58,17 @@ mysql> show master status;
 需要记住mysql-bin.00009 196 这两个参数,后面要用到
 # 从数据库配置的修改
 *修改/etc/my.cnf
-```
+``` ini
 server-id = 2
 ```
 ## 配置连接哪台主服务器
-```
+
+``` sql
 mysql>change master to master_host='`192.168.1.2',master_user='slave_account',master_password='37588645',master_log_file='mysql-bin.000009',master_log_pos=196;
 mysql>start slave;
 ```
 ## 检查备份状态:
-```
+``` sql
 mysql> show slave status\G;
 *************************** 1. row ***************************  
                Slave_IO_State: Waiting for master to send event  
@@ -88,6 +89,6 @@ mysql> show slave status\G;
 ```
 注:Slave_IO_RUNNING及Slave_SQL_Running进程必须正常运行,即YES状态，否则说明同步失败。
 ## 如果要停掉备份状态,可以执行以下命令
-```
+``` sql
 mysql> stop slave;
 ```
