修正背景图

--- a/_posts/technology/2018-04-21-MySql的主从备份配置说明.md
+++ b/_posts/technology/2018-04-21-MySql的主从备份配置说明.md
@@ -2,7 +2,7 @@
 layout: blog
 istop: true
 title: "MySql的主从备份配置说明"
-background-image: http://ot1cc1u9t.bkt.clouddn.com/17-7-16/38390376.jpg
+background-image: http://img2.zol.com.cn/product/31/275/cecq1mwUyT39A.jpg
 date:  2018-04-21 11:18:56
 category: 技术
 tags:
