修复图片路径错误

--- a/_posts/technology/2018-04-23-微信加密数据库密码.md
+++ b/_posts/technology/2018-04-23-微信加密数据库密码.md
@@ -2,7 +2,7 @@
 layout: blog
 istop: true
 title: "微信加密数据库密码"
-background-image: http://ot1cc1u9t.bkt.clouddn.com/17-7-16/38390376.jpg
+background-image: http://www.micronet.com.cn/News/newsImage/20140121111520238502.jpg
 date:  2018-04-23 14:51:11
 category: 技术
 tags:
