更新技术文档Mysql主从配置

--- a/_posts/technology/2018-04-21-MySql的主从备份配置说明.md
+++ b/_posts/technology/2018-04-21-MySql的主从备份配置说明.md
@@ -39,6 +39,10 @@ mysql> create user 'slave_account'@'%' identified by '37588645';
 ``` sql
 mysql> grant replication slave on *.* to 'slave_account'@'%' identified by '37588645';
 ```
+## 刷新权限
+```
+mysql> flush privileges;
+```
 ## 以上已经要求数据一致,如果不一致,可以执行以下步骤,导出数据库
 ``` sql
 mysql>flush tables with read lock;
